<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".map_GPS">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/gmaps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitud"
        android:id="@+id/tvLatitud"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitud"
        android:id="@+id/tvLongitud"
        android:layout_alignBottom="@+id/tvLatitud"
        android:layout_alignRight="@+id/tvTitle"
        android:layout_alignEnd="@+id/tvTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitud_coordinates"
        android:id="@+id/tvlatitud_coordinates"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tvLatitud"
        android:layout_toEndOf="@+id/tvLatitud" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitud_coordinates"
        android:id="@+id/tvlongitud_coordinates"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tvLongitud"
        android:layout_toEndOf="@+id/tvLongitud" />


</RelativeLayout>
